# coding1feri

./: README.md
algoritmiInPodatkovneStruktureVaje/Vaja1_sklad_vrsta/: CMakeLists.txt  main.cpp
algoritmiInPodatkovneStruktureVaje/vaja10/: CMakeLists.txt  main.cpp
algoritmiInPodatkovneStruktureVaje/vaja11/: CMakeLists.txt  main.cpp
algoritmiInPodatkovneStruktureVaje/vaja2_Hanojski_stolp/: CMakeLists.txt  main.cpp
algoritmiInPodatkovneStruktureVaje/vaja3_dvojno_povezan_seznam/: CMakeLists.txt  main.cpp
algoritmiInPodatkovneStruktureVaje/vaja4_binarno drevo/: CMakeLists.txt  main.cpp
algoritmiInPodatkovneStruktureVaje/vaja5/: CMakeLists.txt
algoritmiInPodatkovneStruktureVaje/vaja6_quick_sort/: CMakeLists.txt  main.cpp
algoritmiInPodatkovneStruktureVaje/vaja7_quick_sort_linked_list/: CMakeLists.txt  main.cpp
algoritmiInPodatkovneStruktureVaje/vaja8/: CMakeLists.txt  main.cpp
algoritmiInPodatkovneStruktureVaje/vaja9/: CMakeLists.txt  main.cpp
aplikacijeRacunalniskihAlgoritmovVaje/Vaja1/: Vaja1.sln
aplikacijeRacunalniskihAlgoritmovVaje/vaja4/: CMakeLists.txt  main.cpp
osnoveSvetovnegaSpletaVaje/vaja1/: index.html  (+3 more)
programiranje1Vaje/: vaja2.cpp  vaja4.cpp  vaja5.cpp  vaja6.cpp  vaja7.cpp  vaja8.cpp
programiranje2vaje/vaja1002/: Artist.cpp  Artist.h  Artwork.cpp  Artwork.h  CMakeLists.txt  Date.cpp  Date.h  Gallery.cpp  Gallery.h  Painting.cpp  Painting.h  Player.cpp  Player.h  PlayerTrainer.cpp  PlayerTrainer.h  PrintIfPainting.cpp  PrintIfPainting.h  Sculpture.cpp  Sculpture.h  Trainer.cpp  Trainer.h  main.cpp
vaja0101/: CMakeLists.txt  main.cpp
(+181 files in other folders)
