cmake_minimum_required(VERSION 3.21)
project(vaja1002a)

set(CMAKE_CXX_STANDARD 17)

add_executable(vaja1002a main.cpp Artist.cpp Artist.h Artwork.cpp Artwork.h Date.cpp Date.h Gallery.cpp Gallery.h Painting.cpp Painting.h PrintIfPainting.cpp PrintIfPainting.h Sculpture.cpp Sculpture.h Player.cpp Player.h Trainer.cpp Trainer.h PlayerTrainer.cpp PlayerTrainer.h)
